# plotly-bootstrap-templates

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _create_templates.py  pyproject.toml
src/plotly_bootstrap_templates/: __init__.py
src/plotly_bootstrap_templates/templates/: lux_dark.json
tests/: test_plot.py
