[project]
name = "plotly-bootstrap-templates"
version = "2.1.0"
description = "A collection of Plotly figure templates with a Bootstrap theme"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Max Weiner" }, { name = "Ann Marie Ward" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["plotly~=6.3"]


[dependency-groups]
dev = ["numpy~=2.0", "pandas~=2.3", "pytest~=8.4"]
create = [
  "colormath>=3.0.0",
  "dash-bootstrap-components~=2.0",
  "numpy~=2.0",
  "spectra~=0.1.0",
  "tinycss2~=1.4",
]

[project.urls]
Documentation = "https://github.com/axtimhaus/plotly-bootstrap-templates/blob/main/README.md"
Issues = "https://github.com/axtimhaus/plotly-bootstrap-templates/issues"
Source = "https://github.com/axtimhaus/plotly-bootstrap-templates/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/plotly_bootstrap_templates"]

[tool.pyright]
venvPath = "."
venv = ".venv"
